<resources>
    <string name="app_name">DrinkRater</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign-In</string>
    <string name="register">Register</string>
    <string name="drinkname">Drink Name</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="typeOfDrink">Type of Drink</string>
    <string name="abv">Alcohol by Volume</string>
    <string name="addDrink">Add a New Drink</string>


    <string-array name="drinks_array">
        <item>Jameson Original</item>
        <item>Redbreast 12 Year Old Cask Strength Irish Whiskey</item>
        <item>Glenfiddich 12 YEAR OLD</item>
        <item>Patron Anejo Tequila</item>
        <item>Tanqueray Gin</item>
        <item>Rombauer Chardonnay 2016</item>
        <item>Hennessy Vs Cognac</item>
        <item>Tree House Brewing Company Julius</item>
    </string-array>

</resources>
